added continous wrap to GI and made sure all autos work on the red alliance. Added in untested code for 2 piece auto

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -3,14 +3,14 @@
   "robotLength": 0.8128,
   "holonomicMode": true,
   "pathFolders": [
-    "BB",
-    "CB",
-    "RB"
+    "Center",
+    "Left",
+    "Right"
   ],
   "autoFolders": [
-    "BB Autos",
-    "CB Autos",
-    "RB Autos"
+    "Center Autos",
+    "Left Autos",
+    "Right Autos"
   ],
   "defaultMaxVel": 1.0,
   "defaultMaxAccel": 1.0,
